# cg_2

./: CMakeLists.txt  readme.md
lib/: geometry.h  lib.h
src/: geometry.cpp  lib.cpp  main.cpp
